--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ async-timeout==3.0.1
 attrs==20.2.0
 certifi==2020.6.20
 chardet==3.0.4
+gunicorn==20.0.4
 idna==2.10
 multidict==4.7.6
 requests==2.24.0
