--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ chardet==3.0.4
 gunicorn==20.0.4
 idna==2.10
 multidict==4.7.6
+python-dotenv==0.14.0
 requests==2.24.0
 twitchio==1.1.0
 typing-extensions==3.7.4.3 ; python_version < '3.8'
